--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,16 +16,22 @@ services:
   nginx:
     build: ./nginx
     platform: linux/amd64
+    ports:
+      - '8002:80'
     volumes:
       - ./nginx/opentelemetry_module.conf:/etc/nginx/conf.d/opentelemetry_module.conf
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     environment:
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://collector:4317/
     depends_on:
-      - backend
-  backend:
-    build: ./backend
+      - apache
+  apache:
+    build: ./apache
+    platform: linux/amd64
+    ports:
+      - '8001:80'
     environment:
+    # settings below are for the PHP tier, apache takes config from opentelemetry_moduel.conf
       - OTEL_TRACES_EXPORTER=otlp
       - OTEL_METRICS_EXPORTER=none
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://collector:4318/
