--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
     location / {
-        proxy_pass http://backend:8080;
+        proxy_pass http://apache;
     }
 }
